--- a/src/index.html
+++ b/src/index.html
@@ -38,17 +38,22 @@
     <!-- <script type="text/javascript" src="https://code.jscharting.com/latest/modules/types.js"></script> -->
     <script type="text/javascript"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.4/socket.io.min.js'></script>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+          new google.translate.TranslateElement({ pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE }, 'google_translate_element');
+        }
+      </script>
     <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> 
     <!-- <div id="google_translate_element"></div>  -->
       
-    <script type="text/javascript"> 
-        function googleTranslateElementInit() { 
+    <!-- <script type="text/javascript"> 
+        function googleTranslateElementInit(){ 
             new google.translate.TranslateElement(
                 {pageLanguage: 'en'}, 
                 'google_translate_element'
             ); 
         } 
-    </script> 
+    </script>  -->
       
    
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.3/tailwind.min.css"> -->
