--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
         }
       </script>
       
-      <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+      <!-- <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
     <!-- <script type="text/javascript">
         function googleTranslateElementInit() {
           new google.translate.TranslateElement({ pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE }, 'google_translate_element');
